Add workaround for Java17